--- a/config/git/config
+++ b/config/git/config
@@ -1,6 +1,11 @@
+[user]
+	email = "78461130+Sakooooo@users.noreply.github.com"
+	name = "Sakooooo"
+
 [credential "https://github.com"]
 	helper =
 	helper = !gh auth git-credential
+
 [credential "https://gist.github.com"]
 	helper =
 	helper = !gh auth git-credential
