--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -51,7 +51,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono ;2
 
 modules-left = xworkspaces xwindow
-modules-right = battery pipewire date
+modules-right = battery pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -103,26 +103,14 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
-; If not, uses default sink
-; sink = alsa_output.pci-0000_12_00.3.analog-stereo
+format-volume-prefix = "VOL "
+format-volume-prefix-foreground = ${colors.primary}
+format-volume = <label-volume>
 
-; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
-; Default: true
-use-ui-max = true
+label-volume = %percentage%%
 
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-interval = 5
-
-[module/pipewire]
-type = custom/script
-exec = /home/sako/.config/polybar/pipewire-polybar.sh 
-interval = 3
-click-right = exec pavucontrol &
-click-left = /home/sako/.config/polybar/pipewire-polybar.sh --mute &
-scroll-up = /home/sako/.config/polybar/pipewire-polybar.sh --up &
-scroll-down = /home/sako/.config/polybar/pipewire-polybar.sh --down &
+label-muted = muted
+label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
 type = internal/xkeyboard
