--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,4 +3,11 @@ italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
-font_size 10.0
+# big big big big big
+font_size 12.0
+
+# heheheheeheheheheh
+scrollback_lines 2000
+
+# SHUT UP
+enable_audio_bell no
