--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
+background = #76637f 
 background-alt = #373B41
 foreground = #C5C8C6
 primary = #F0C674
