--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -17,9 +17,9 @@
 ;==========================================================
 
 [colors]
-background = #76637f 
+background = #68009c 
 background-alt = #373B41
-foreground = #C5C8C6
+foreground = #ffffff
 primary = #F0C674
 secondary = #8ABEB7
 alert = #A54242
