--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -32,7 +32,7 @@ height = 24pt
 
 ; dpi = 79 
 
-bottom = true
+;bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
