--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -114,7 +114,7 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, Enter, exec, kitty
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
