add wallpaper support

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -30,6 +30,9 @@ input {
     kb_options =
     kb_rules =
 
+    # no mouse acceleration pls :)
+    accel_profile = flat
+
     follow_mouse = 1
 
     touchpad {
@@ -115,11 +118,11 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, C, killactive,
+bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
