--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hyprpaper
+exec-once = hyprpaper & waybar
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
