add fullscreen thingy

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -107,6 +107,10 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
+misc {
+    disable_hyprland_logo = true
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -126,6 +130,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
+bind=  $mainMod, F, fullscreen,
 
 # Move focus with mainMod + vim binds 
 bind = $mainMod, H, movefocus, l
