--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -12,5 +12,5 @@ scrollback_lines 2000
 # SHUT UP
 enable_audio_bell no
 
-# spase
-window_padding_width 20 
+# maxmium productivity probably
+window_padding_width 0 
