--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -15,7 +15,17 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hyprpaper & /home/sako/.config/waybar/launch-waybar.sh & nm-applet & blueman-applet & sleep 2; keepassxc & 
+# fix gtk apps
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# background
+exec-once = hyprpaper 
+# bar
+exec-once = /home/sako/.config/waybar/launch-waybar.sh
+# applets
+exec-once = nm-applet
+exec-once = blueman-applet
+# apps
+exec-once = keepassxc
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
