--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -25,7 +25,8 @@ exec-once = /home/sako/.config/waybar/launch-waybar.sh
 exec-once = nm-applet
 exec-once = blueman-applet
 # apps
-exec-once = keepassxc
+# fix autotype option thingy
+exec-once = keepassxc -platform xcb
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
