--- a/config/newsboat/config
+++ b/config/newsboat/config
@@ -1,1 +1,19 @@
+# general settings
+auto-reload yes
+max-items 50
+
+# image viewer
 macro i set pager "/home/sako/.config/newsboat/kitty-img-pager.sh"; open; set pager internal
+
+# unbind keys
+unbind-key ENTER
+unbind-key j
+unbind-key k
+unbind-key J
+unbind-key K
+
+# bind keys - vim style
+bind-key j down
+bind-key k up
+bind-key l open
+bind-key h quit
