add systray to shadow exclude

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -49,6 +49,7 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'dwm'",
+  "class_g = 'dwmsystray'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
