--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #68009c 
+background = #000000
 background-alt = #373B41
 foreground = #ffffff
 primary = #F0C674
@@ -27,7 +27,7 @@ disabled = #707880
 
 [bar/mainbar]
 width = 100%
-height = 24pt
+height = 14pt
 ; radius = 6
 
 ; dpi = 79 
