--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -49,7 +49,7 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'dwm'",
-  "_NET_WM_WINDOW_TYPE@:32a *= '_NET_WM_WINDOW_TYPE_DOCK'",
+  "class_g = 'dwmsystray'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
