--- a/.github/workflows/flake-check.yml
+++ b/.github/workflows/flake-check.yml
@@ -1,6 +1,10 @@
 name: Flake Check
 
 on:
+  push:
+    branches:
+      - master
+     
   schedule:
     - cron: "30 12 * * *"
   workflow_dispatch:
