--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v4
       - name: Update flake.lock
-        uses: DeterminateSystems/update-flake-lock@vX
+        uses: DeterminateSystems/update-flake-lock@v16
         with:
           pr-title: "chore: Update flake.lock" # Title of PR to be created
           pr-labels: | # Labels to be set on the PR
