attempt to make it look much better

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -42,6 +42,12 @@ line-size = 0pt
 ;border-size = 4pt
 ;border-color = ${colors.background} 
 
+border-top-size = 10pt
+border-left-size = 10pt
+border-right-size = 10pt
+border-color = #00000000
+
+
 padding-left = 0
 padding-right = 1
 
