--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -216,7 +216,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "xrender";
+backend = "glx";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
