--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -180,3 +180,13 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# audio
+bind = , XF86AudioLowerVolume, pactl set-sink-volume 0 -5% 
+bind = , XF86AudioRaiseVolume, pactl set-sink-volume 0 +5%
+bind = , XF86AudioMute, pactl set-sink-mute 0 toggle
+
+# brightness
+bind = , XF86MonBrightnessUp, brightnessctl s +100
+bind = , XF86MonBrightnessDown, brightnessctl s 100-
+
