--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -187,6 +187,6 @@ bind = , XF86AudioRaiseVolume, pactl set-sink-volume 0 +5%
 bind = , XF86AudioMute, pactl set-sink-mute 0 toggle
 
 # brightness
-bind = , XF86MonBrightnessUp, brightnessctl s +100
-bind = , XF86MonBrightnessDown, brightnessctl s 100-
+bind = , XF86MonBrightnessUp, "brightnessctl s +100"
+bind = , XF86MonBrightnessDown, "brightnessctl s 100-"
 
