--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -182,11 +182,11 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # audio
-bind = , XF86AudioLowerVolume, pactl set-sink-volume 0 -5% 
-bind = , XF86AudioRaiseVolume, pactl set-sink-volume 0 +5%
-bind = , XF86AudioMute, pactl set-sink-mute 0 toggle
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume 0 -5% 
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume 0 +5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute 0 toggle
 
 # brightness
-bind = , XF86MonBrightnessUp, "brightnessctl s +100"
-bind = , XF86MonBrightnessDown, "brightnessctl s 100-"
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +100
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 100-
 
