add multiple layouts for hyprland

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -36,10 +36,10 @@ env = XCURSOR_SIZE,16
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us,ar
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     # no mouse acceleration pls :)
