--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 # fix gtk apps
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
 exec-once = hyprpaper 
 # bar
