--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -127,6 +127,7 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = nomaxsize, title:^(Wine configuration)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
