--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -49,6 +49,7 @@ input {
 
     touchpad {
         natural_scroll = false
+        disable_while_typing=false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
