--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -139,7 +139,7 @@ bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, wofi --show drun
+bind = $mainMod, SPACE, exec, wofi --allow-images --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
 bind=  $mainMod, F, fullscreen,
