--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,auto
 
 # startup
 # fix gtk apps
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
 exec-once = hyprpaper 
 # bar
