when did i make this change

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -13,8 +13,7 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+# startup
 # fix gtk apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
