--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -16,6 +16,8 @@ monitor=,preferred,auto,auto
 # startup
 # fix gtk apps
 #exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# this fixes it too i think
+exec-one=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
 exec-once = hyprpaper 
 # bar
