--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -15,9 +15,9 @@ monitor=,preferred,auto,auto
 
 # startup
 # fix gtk apps
-#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # this fixes it too i think
-exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
 exec-once = hyprpaper 
 # bar
