--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -141,7 +141,7 @@ bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, wofi --allow-images --show drun
+bind = $mainMod, SPACE, exec, pkill wofi || wofi --allow-images --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
 bind=  $mainMod, F, fullscreen,
@@ -192,4 +192,7 @@ bind = , XF86AudioMute, exec, pactl set-sink-mute 0 toggle
 # brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl s +100
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 100-
+
+# swaylock
+bind = $mainMod CONTROL, l, exec, swaylock
 
