--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -137,7 +137,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-  "100:class_g = 'dwmsystray'"
+  "100:class_g = 'dwmsystray'",
+  "100:class_g = 'dwm'"
 ]
 
 
