--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,3 +14,41 @@ enable_audio_bell no
 
 # maxmium productivity probably
 window_padding_width 15 
+
+# colorscheme
+# etc
+foreground   #d0d0d0
+background   #000000
+cursor       #d0d0d0
+
+# black
+color0       #000000
+color8       #808080
+
+# red
+color1       #ff0000
+color9       #ff0000
+
+# green
+color2       #33ff00
+color10      #33ff00
+
+# yellow
+color3       #ff0099
+color11      #ff0099
+
+# blue
+color4       #0066ff
+color12      #0066ff
+
+# magenta
+color5       #cc00ff
+color13      #cc00ff
+
+# cyan
+color6       #00ffff
+color14      #00ffff
+
+# white
+color7       #d0d0d0
+color15      #ffffff
