--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -42,7 +42,8 @@ line-size = 0pt
 ;border-size = 4pt
 ;border-color = ${colors.background} 
 
-border-top-size = 10pt
+;border-top-size = 10pt
+border-bottom-size = 10pt
 border-left-size = 13pt
 border-right-size = 13pt
 border-color = #00000000
