--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -32,7 +32,7 @@ height = 24pt
 
 ; dpi = 79 
 
-bottom = true
+;bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -43,10 +43,10 @@ line-size = 0pt
 ;border-color = ${colors.background} 
 
 ;border-top-size = 10pt
-border-bottom-size = 5pt
-border-left-size = 13pt
-border-right-size = 13pt
-border-color = #00000000
+;border-bottom-size = 5pt
+;border-left-size = 13pt
+;border-right-size = 13pt
+;border-color = #00000000
 
 
 padding-left = 0
