--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -59,7 +59,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono ;1
 
-modules-left = xworkspaces xwindow
+modules-left = exwm-workspace xwindow
 modules-right = battery pulseaudio date
 
 cursor-click = pointer
@@ -74,6 +74,13 @@ wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
+
+[module/exwm-workspace]
+type = custom/ipc
+hook-0 = emacsclient -e "exwm-workspace-current-index" | sed -e 's/^"//' -e 's/"$//'
+initial = 1
+format-underline = ${colors.underline-1}
+format-padding = 1
 
 [module/xworkspaces]
 type = internal/xworkspaces
