--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -124,7 +124,8 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'",
+	      	  "class_g = 'emacs'"];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
