--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -124,8 +124,8 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'",
-	      	  "class_g = 'emacs'"];
+focus-exclude = [ "class_g = 'Cairo-clock'"
+	      	  ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -137,6 +137,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
+opacity-rule = [ "100:class_g = 'emacs'" ];
 
 #################################
 #           Corners             #
