get rid of exwm-workspaces in polybar for now

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -59,7 +59,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono ;1
 
-modules-left = exwm-workspace xwindow
+modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio date
 
 cursor-click = pointer
