--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -59,7 +59,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono ;1
 
-modules-left = xworkspaces xwindow
+modules-left = bspwm xwindow
 modules-right = battery pulseaudio date
 
 cursor-click = pointer
@@ -82,6 +82,44 @@ initial = 1
 format-underline = ${colors.underline-1}
 format-padding = 1
 
+[module/bspwm]
+type = internal/bspwm
+
+; Only show workspaces defined on the same output as the bar
+; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
+; But if you rename your bspwm monitors with bspc -n this option will no longer
+; behave correctly.
+; Default: true
+pin-workspaces = true
+
+; Output mode flags after focused state label
+; Default: false
+inline-mode = false
+
+; Create click handler used to focus workspace
+; Default: true
+enable-click = false
+
+; Create scroll handlers used to cycle workspaces
+; Default: true
+enable-scroll = false
+
+; Set the scroll cycle direction 
+; Default: true
+reverse-scroll = false
+
+; Use fuzzy (partial) matching on labels when assigning 
+; icons to workspaces
+; Example: code;♚ will apply the icon to all workspaces 
+; containing 'code' in the label
+; Default: false
+fuzzy-match = true
+
+; Only scroll through occupied workspaces
+; Default: false
+; New in version 3.6.0
+occupied-scroll = true
+
 [module/xworkspaces]
 type = internal/xworkspaces
 
@@ -97,8 +135,7 @@ label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty = %name% label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
 [module/xwindow]
