--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -75,6 +75,110 @@ wm-restack = bspwm
 
 ; override-redirect = true
 
+[bar/pc-monitor-1]
+monitor = DP-0
+width = 100%
+height = 24pt
+; radius = 6
+
+; dpi = 79 
+
+;bottom = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 0pt
+
+;border-size = 4pt
+;border-color = ${colors.background} 
+
+;border-top-size = 10pt
+;border-bottom-size = 5pt
+;border-left-size = 13pt
+;border-right-size = 13pt
+;border-color = #00000000
+
+
+padding-left = 0
+padding-right = 1
+
+module-margin = 1
+
+separator = |
+separator-foreground = ${colors.disabled}
+
+font-0 = JetBrainsMono ;1
+
+modules-left = xworkspaces xwindow
+modules-right = battery pulseaudio date
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
+
+tray-position = right
+
+; wm-restack = generic
+wm-restack = bspwm
+; wm-restack = i3
+
+; override-redirect = true
+
+[bar/pc-monitor-2]
+monitor = HDMI-0
+width = 100%
+height = 24pt
+; radius = 6
+
+; dpi = 79 
+
+;bottom = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 0pt
+
+;border-size = 4pt
+;border-color = ${colors.background} 
+
+;border-top-size = 10pt
+;border-bottom-size = 5pt
+;border-left-size = 13pt
+;border-right-size = 13pt
+;border-color = #00000000
+
+
+padding-left = 0
+padding-right = 1
+
+module-margin = 1
+
+separator = |
+separator-foreground = ${colors.disabled}
+
+font-0 = JetBrainsMono ;1
+
+modules-left = xworkspaces xwindow
+modules-right = battery pulseaudio date
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
+
+tray-position = right
+
+; wm-restack = generic
+wm-restack = bspwm
+; wm-restack = i3
+
+; override-redirect = true
+
+
+
 [module/exwm-workspace]
 type = custom/ipc
 hook-0 = emacsclient -e "exwm-workspace-current-index" | sed -e 's/^"//' -e 's/"$//'
