--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -279,7 +279,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %Y-%m-%d %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
