disable group by monitor

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -189,6 +189,8 @@ format-padding = 1
 [module/xworkspaces]
 type = internal/xworkspaces
 
+group-by-monitor = false 
+
 label-active = %name%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
