--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -111,7 +111,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono ;1
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio date
+modules-right = filesystem battery pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -168,8 +168,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-tray-position = right
 
 ; wm-restack = generic
 wm-restack = bspwm
