--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,21 @@
-name: "Test"
+name: "Cachix Build"
 on:
   pull_request:
   push:
 jobs:
-  tests:
+  sakopc:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v25
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        nix_path: nixpkgs=channel:nixos-24.05
     - uses: cachix/cachix-action@v14
       with:
-        name: mycache
+        name: sako-nixos 
         # If you chose signing key for write access
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build
+    - run: nix build .#nixosConfiguration.sakopc.config.system.build.toplevel
     - run: nix-shell --run "echo OK"
