--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,5 @@ jobs:
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix run nixpkgs#nixos-rebuild -- nixos-rebuild --flake .#sakopc build
+    - run: nix run nixpkgs#nixos-rebuild -- --flake .#sakopc build
     - run: nix-shell --run "echo OK"
