--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -60,7 +60,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono ;1
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio date
+modules-right = filesystem battery pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
