--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -105,8 +105,8 @@ fade-out-step = 0.05;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1
+# inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
