--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -25,9 +25,6 @@ exec-once = /home/sako/.config/waybar/launch-waybar.sh
 # applets
 exec-once = nm-applet
 exec-once = blueman-applet
-# apps
-# fix autotype option thingy
-exec-once = keepassxc -platform xcb
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -37,7 +34,7 @@ env = XCURSOR_SIZE,16
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,ar
+    kb_layout = us
     kb_variant =
     kb_model =
     kb_options = grp:alt_shift_toggle
