--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -32,6 +32,12 @@ exec-once = blueman-applet
 # Some default env vars.
 env = XCURSOR_SIZE,16
 
+# Nvidia Environment Vars
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -69,10 +75,11 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
+    blur {
+      enabled = true
+      size = 3
+      passes = 1
+    } 
 
     drop_shadow = true
     shadow_range = 4
@@ -103,7 +110,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = true
 }
 
 gestures {
