--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -136,7 +136,7 @@ windowrulev2 = nomaxsize, title:^(Wine configuration)$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, wezterm 
+bind = $mainMod, RETURN, exec, foot 
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
