--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -43,7 +43,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:alt_shift_toggle, ctrl:nocaps
     kb_rules =
 
     # no mouse acceleration pls :)
