--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-# font=monospace:size=8
+font=JetBrainsMono NF:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -54,7 +54,7 @@
 
 
 [scrollback]
-# lines=1000
+lines=1000
 # multiplier=3.0
 # indicator-position=relative
 # indicator-format=""
