--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -46,7 +46,7 @@ font=JetBrainsMono NF:size=12
 # command=
 # command-focused=no
 
-[desktop-notifications]
+#[desktop-notifications]
 # command=notify-send --wait --app-name ${app-id} --icon ${app-id} --category ${category} --urgency ${urgency} --expire-time ${expire-time} --hint STRING:image-path:${icon} --replace-id ${replace-id} ${action-argument} --print-id -- ${title} ${body}
 # command-action-argument=--action ${action-name}=${action-label}
 # close=""
