--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -141,7 +141,7 @@ bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, pkill wofi || wofi --allow-images --show drun
+bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -show-icons 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
 bind=  $mainMod, F, fullscreen,
