--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -21,7 +21,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # background
 exec-once = hyprpaper 
 # bar
-exec-once = /home/sako/.config/waybar/launch-waybar.sh
+# exec-once = /home/sako/.config/waybar/launch-waybar.sh
 # applets
 exec-once = nm-applet
 exec-once = blueman-applet
