--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -22,6 +22,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = hyprpaper 
 # bar
 # exec-once = /home/sako/.config/waybar/launch-waybar.sh
+exec = /home/sako/.config/ags/launch-ags.sh
 # applets
 exec-once = nm-applet
 exec-once = blueman-applet
