--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -16,6 +16,8 @@ monitor=,preferred,auto,auto
 # startup
 # fix gtk apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# systemd user services
+exec-once = dbus-update-activation-environment --systemd --all
 # this fixes it too i think
 #exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # background
