--- a/config/waybar/config
+++ b/config/waybar/config
@@ -20,7 +20,7 @@
 	],
 
 	"hyprland/workspaces": {
-                "all-outputs": true,
+                "all-outputs": false,
 		"disable-scroll": true,
 		"format": "{name}",
     "persistent_workspaces": {
