--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -23,7 +23,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 # background
 exec-once = hyprpaper 
 # bar
-exec-once = /home/sako/.config/waybar/launch-waybar.sh
+# exec-once = /home/sako/.config/waybar/launch-waybar.sh
 # exec = /home/sako/.config/ags/launch-ags.sh
 # applets
 exec-once = nm-applet
