--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -77,21 +77,21 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 0
     blur {
-      enabled = true
+      enabled = false 
       size = 3
       passes = 1
     } 
 
-    drop_shadow = true
+    drop_shadow = false 
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled = true
+    enabled = false 
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
