for the love of god

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -140,7 +140,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, foot 
-bind = $mainMod, W, killactive,
+bind = $mainMod CONTROL, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
