--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -140,8 +140,8 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, foot 
-bind = $mainMod CONTROL, W, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, W, killactive,
+bind = $mainMod CONTROL, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -show-icons 
