config/hyprland: hyprland.conf use hyprlock instead of swaylock

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -197,5 +197,5 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl s +100
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 100-
 
 # swaylock
-bind = $mainMod CONTROL, l, exec, swaylock
+bind = $mainMod CONTROL, l, exec, hyprlock
 
