--- a/config/waybar/config
+++ b/config/waybar/config
@@ -41,7 +41,7 @@
 	"pulseaudio": {
 		"format": "{icon} {volume:2}%",
 		"format-bluetooth": "{icon}  {volume}% ",
-		"format-muted": "MUTE",
+		"format-muted": "󰝟 MUTED",
 		"format-icons": {
 			"headphones": "",
 			"default": [
