--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -24,6 +24,8 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = hyprpaper 
 # bar
 exec-once = /home/sako/.config/waybar/launch-waybar.sh
+# notification dameon
+exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
 # applets
 exec-once = nm-applet
