--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -36,6 +36,8 @@ exec-once = blueman-applet
 
 # Some default env vars.
 env = XCURSOR_SIZE,16
+# Hyer cursor
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 # Nvidia Environment Vars
 env = LIBVA_DRIVER_NAME,nvidia
