--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,9 @@ jobs:
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     # - run: nix run nixpkgs#nixos-rebuild -- --flake .#sakopc build
-    - run: nix run github:Mic92/nix-fast-build -- --no-nom --skip-cached --flake .#nixosConfigurations.sakopc.config.system.build.toplevel
-    - run: nix-shell --run "echo All done!"
+   - run: nix profile install nixpkgs#nix-fast-build 
+   - run: nix-fast-build --skip-cached --no-nom --flake .#nixosConfigurations.sakopc.config.system.build.toplevel
+   - run: nix-shell --run "echo All done!"
   sakotop:
     runs-on: ubuntu-latest
     steps:
@@ -37,7 +38,9 @@ jobs:
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     # - run: nix run nixpkgs#nixos-rebuild -- --flake .#sakotop build
-    - run: nix run github:Mic92/nix-fast-build -- --no-nom --skip-cached --flake .#nixosConfigurations.sakotop.config.system.build.toplevel
+    # - run: nix run github:Mic92/nix-fast-build -- --no-nom --skip-cached --flake .#nixosConfigurations.sakotop.config.system.build.toplevel
+    - run: nix profile install nixpkgs#nix-fast-build 
+    - run: nix-fast-build --skip-cached --no-nom --flake .#nixosConfigurations.sakotop.config.system.build.toplevel
     - run: nix-shell --run "echo All done!"
   sakowsl:
     runs-on: ubuntu-latest
@@ -55,5 +58,7 @@ jobs:
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     # - run: nix run nixpkgs#nixos-rebuild -- --flake .#sakowsl build
-    - run: nix run github:Mic92/nix-fast-build -- --no-nom --skip-cached --flake .#nixosConfigurations.sakowsl.config.system.build.toplevel
+    # - run: nix run github:Mic92/nix-fast-build -- --no-nom --skip-cached --flake .#nixosConfigurations.sakowsl.config.system.build.toplevel
+    - run: nix profile install nixpkgs#nix-fast-build 
+    - run: nix-fast-build --skip-cached --no-nom --flake .#nixosConfigurations.sakowsl.config.system.build.toplevel
     - run: nix-shell --run "echo All done!"
