--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -8,8 +8,12 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# default
 monitor=,preferred,auto,auto
 
+# sakopc
+monitor = DP-1, 1920x1080@239.96, 0x0, 1
+monitor = HDMI-A-1, 1920x1080, -1920x0, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -42,7 +46,6 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 # Nvidia Environment Vars
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -76,6 +79,10 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
+}
+
+cursor {
+    no_hardware_cursors = true
 }
 
 decoration {
