--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -40,6 +40,7 @@ exec-once = blueman-applet
 
 # Some default env vars.
 env = XCURSOR_SIZE,16
+env = HYPRCURSOR_SIZE,16
 # Hyer cursor
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
