--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -39,8 +39,8 @@ exec-once = blueman-applet
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,16
-env = HYPRCURSOR_SIZE,16
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 # Hyer cursor
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
