i am going to kill myself

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -39,10 +39,10 @@ exec-once = blueman-applet
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-# env = XCURSOR_SIZE,24
-# env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
 # Hyer cursor
-env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 
 # Nvidia Environment Vars
 env = LIBVA_DRIVER_NAME,nvidia
