--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -34,6 +34,7 @@ exec-once = mako
 # applets
 exec-once = nm-applet
 exec-once = blueman-applet
+exec-once = nextcloud
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
