--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -52,7 +52,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us, ara
     kb_variant =
     kb_model =
     kb_options = grp:alt_shift_toggle, ctrl:nocaps
