add --background to nextcloud autostart

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -34,7 +34,7 @@ exec-once = mako
 # applets
 exec-once = nm-applet
 exec-once = blueman-applet
-exec-once = nextcloud
+exec-once = nextcloud --background
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
