--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -146,7 +146,7 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaxsize, title:^(Wine configuration)$
-windowrulev2 = float, class:(Zoom Workspace)
+windowrule = float, ^(Zoom Workplace)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
