add playerctl keybinds

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -210,6 +210,11 @@ bind = , XF86AudioMute, exec, pactl set-sink-mute 0 toggle
 bind = , XF86MonBrightnessUp, exec, brightnessctl s +100
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 100-
 
+# player
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioNext, exec, playerctl next
+
 # swaylock
 bind = $mainMod CONTROL, l, exec, hyprlock
 
