--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -27,7 +27,8 @@ exec-once = dbus-update-activation-environment --systemd --all
 # background
 exec-once = hyprpaper 
 # bar
-exec-once = /home/sako/.config/waybar/launch-waybar.sh
+# exec-once = /home/sako/.config/waybar/launch-waybar.sh
+exec-once = /home/sako/.config/ags/launch-ags.sh
 # notification dameon
 exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
