--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -147,7 +147,7 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaxsize, title:^(Wine configuration)$
-windowrule = float, ^(Zoom Workplace)$
+windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(Zoom Workspace)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
