--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -149,6 +149,7 @@ misc {
 windowrulev2 = nomaxsize, title:^(Wine configuration)$
 windowrule = float, ^(Zoom Workplace)$
 windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
+windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
