this thing has got to be retarded

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -151,6 +151,13 @@ windowrule = float, ^(Zoom Workplace)$
 windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
 windowrulev2 = minsize 1 1, title:^(menu window)$, class:^(Zoom Workplace)$
 windowrulev2 = minsize 1 1, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
+windowrule = float, ^(zoom)$
+windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(zoom)$
+windowrulev2 = minsize 1 1, title:^(menu window)$, class:^(zoom)$
+windowrulev2 = minsize 1 1, title:^(meeting bottombar popup)$, class:^(zoom)$
+windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(zoom)$
+windowrulev2 = move onscreen cursor, title:^(menu window)$, class:^(zoom)$
+windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(zoom)$
 windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
 windowrulev2 = move onscreen cursor, title:^(menu window)$, class:^(Zoom Workplace)$
 windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
