--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -161,7 +161,10 @@ windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(
 windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
 windowrulev2 = move onscreen cursor, title:^(menu window)$, class:^(Zoom Workplace)$
 windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
-
+windowrulev2 = stayfocused, title:^(menu window)$, class:^(Zoom Workplace)$
+windowrulev2 = stayfocused, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
+windowrulev2 = stayfocused, title:^(menu window)$, class:^(zoom)$
+windowrulev2 = stayfocused, title:^(meeting bottombar popup)$, class:^(zoom)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
