save battery and maybe electricity

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -139,6 +139,9 @@ gestures {
 
 misc {
     disable_hyprland_logo = true
+    # from wiki
+    # "it’ll lower the amount of sent frames when nothing is happening on-screen."
+    vfr = true
 }
 
 # Example windowrule v1
