--- a/config/emacs/.offlineimaprc
+++ b/config/emacs/.offlineimaprc
@@ -36,5 +36,5 @@ auth_mechanisms = XOAUTH2
 oauth2_request_url = https://login.microsoftonline.com/common/oauth2/v2.0/token
 oauth2_client_id = 9e5f94bc-e8a4-4e73-b8be-63364c29d753 # thunderbird's token not mine lol
 oauth2_client_secret = "" # no need for this lmao
-oauth2_refresh_token_eval = oauth.get_client_refresh_token("Microsoft") 
-oauth2_access_token_eval = oauth.get_client_token("Microsoft")
+oauth2_refresh_token_eval = get_client_refresh_token("Microsoft") 
+oauth2_access_token_eval = get_client_token("Microsoft")
