(feat) config/emacs: setup outlook support lmao!!!!

--- a/config/emacs/.offlineimaprc
+++ b/config/emacs/.offlineimaprc
@@ -1,6 +1,7 @@
 [general]
 pythonfile = ~/.offlineimap.py
 accounts = Proton, Outlook
+socktimeout = 10
 
 [Account Proton]
 localrepository = Proton-local
@@ -20,21 +21,24 @@ remotepasseval = hydroxide("/home/sako/.hydroxide-bridge-pass")
 folderfilter = lambda foldername: foldername in [ "All Mail", "Archive", "Drafts", "INBOX", "Sent", "Spam", "Starred", "Trash" ]
 
 [Account Outlook]
-localrepostiory = Outlook-local
+localrepository = Outlook-local
 remoterepository = Outlook-remote
 
 [Repository Outlook-local]
-type = maildir
+type = Maildir
 localfolders = ~/Mail/Outlook
 
 [Repository Outlook-remote]
+ssl = yes
+sslcacertfile = /etc/ssl/certs/ca-certificates.crt
 type = IMAP
 remoteusereval = get_user("Microsoft")
 remotehost = outlook.office365.com
 remoteport = 993
 auth_mechanisms = XOAUTH2
 oauth2_request_url = https://login.microsoftonline.com/common/oauth2/v2.0/token
-oauth2_client_id = 9e5f94bc-e8a4-4e73-b8be-63364c29d753 # thunderbird's token not mine lol
-oauth2_client_secret = "" # no need for this lmao
+oauth2_client_id = 9e5f94bc-e8a4-4e73-b8be-63364c29d753
+# oauth2_client_secret = ""
 oauth2_refresh_token_eval = get_client_refresh_token("Microsoft") 
 oauth2_access_token_eval = get_client_token("Microsoft")
+folderfilter = lambda folder: not folder.startswith('Calendar') and not folder.startswith('Contacts')
