--- a/config/emacs/.offlineimaprc
+++ b/config/emacs/.offlineimaprc
@@ -38,7 +38,6 @@ remoteport = 993
 auth_mechanisms = XOAUTH2
 oauth2_request_url = https://login.microsoftonline.com/common/oauth2/v2.0/token
 oauth2_client_id = 9e5f94bc-e8a4-4e73-b8be-63364c29d753
-# oauth2_client_secret = ""
+oauth2_client_secret = 
 oauth2_refresh_token_eval = get_client_refresh_token("Microsoft") 
-oauth2_access_token_eval = get_client_token("Microsoft")
 folderfilter = lambda folder: not folder.startswith('Calendar') and not folder.startswith('Contacts')
