--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -105,7 +105,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
