--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -56,7 +56,7 @@ input {
     kb_layout = us, ara
     kb_variant =
     kb_model =
-    kb_options = grp:ctrls-toggle, ctrl:nocaps
+    kb_options = grp:ctrls_toggle, ctrl:nocaps
     kb_rules =
 
     # no mouse acceleration pls :)
