config/hyprland: add numlock by default

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -59,6 +59,8 @@ input {
     kb_options = grp:ctrls_toggle, ctrl:nocaps
     kb_rules =
 
+    numlock_by_default = true
+
     # no mouse acceleration pls :)
     accel_profile = flat
 
