--- a/config/emacs/.offlineimaprc
+++ b/config/emacs/.offlineimaprc
@@ -1,6 +1,6 @@
 [general]
 pythonfile = ~/.offlineimap.py
-accounts = Proton, Outlook, Gmail-personal-1, Gmail-personal-2
+accounts = Proton, Outlook, Gmail-personal-1, Gmail-personal-2, li
 socktimeout = 60
 
 [Account Proton]
